--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,6 @@
         <title>Document</title>
     </head>
     <body>
-        <div id="root"></div>
+        <div class="root"></div>
     </body>
 </html>
